minor fix: removed the whitespace btwn the <a> menu links and the dropdown icons

--- a/style.css
+++ b/style.css
@@ -92,8 +92,9 @@ body {
 }
 
 .menu__icon-dropdown {
+	display: inline;
 	height: 10px;
-	width: 10px; 
+	width: 15px; 
 	fill: #0f0f0f;
 }
 
